# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice-error"
version = "0.3.1"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Common error boilerplate macros for CLInvoice."

edition = "2021"
license = "GPL3"
readme = "README.md"
repository = "https://www.github.com/Iron-E/clinvoice-error"

[dev-dependencies]
pretty_assertions = "1"
